# SessionPass

./: .gitignore  EnKdev.SessionPass.sln  README.md
EnKdev.SessionPass/: EnKdev.SessionPass.csproj  OtsvCode.cs
EnKdev.SessionPass.Delphi/: EnKdev.SessionPass.Delphi.Tests.dpr  EnKdev.SessionPass.Delphi.Tests.dproj  EnKdev.SessionPass.Delphi.dpr  EnKdev.SessionPass.Delphi.dproj  EnKdev.SessionPass.Delphi.res  HttpHelper.pas  OtsvCode.pas  ProjectGroup1.groupproj
EnKdev.SessionPass.Kotlin/: build.gradle.kts  settings.gradle.kts
EnKdev.SessionPass.Kotlin/gradle/wrapper/: gradle-wrapper.properties
EnKdev.SessionPass.Kotlin/src/main/kotlin/xyz/enkdev/sessionpass/: HttpHelper.kt  OtsvCode.kt
EnKdev.SessionPass.Kotlin/src/test/kotlin/xyz/enkdev/sessionpass/test/: TestProgram.kt
EnKdev.SessionPass.Net6/: HttpHelper.cs
EnKdev.SessionPass.Tests/: EnKdev.SessionPass.Tests.csproj  PhpIntegration.cs  Program.cs
EnKdev.SessionPass.Tests/Properties/: AssemblyInfo.cs
EnKdev.SessionPass/Properties/: AssemblyInfo.cs
libsessionpass/: CMakeLists.txt  HttpHelper.cpp  HttpHelper.h  OtsvCode.cpp  OtsvCode.h
libsessionpass/test/: test.cpp
